--- a/.github/workflows/build-cirros.yaml
+++ b/.github/workflows/build-cirros.yaml
@@ -2,18 +2,13 @@ name: CirrOS image builder
 
 on:
   push:
-    branches:
-      - main
-    tags:
-      - "[01].[0-9]+.[0-9]+"
-  pull_request:
-    branches:
-      - main
+
 jobs:
   cirros-build-matrix:
     strategy:
       matrix:
-        arch: [aarch64, arm, x86_64, ppc64le]
+        # arch: [aarch64, arm, x86_64, ppc64le]
+        arch: [riscv64]
 
     runs-on: ubuntu-22.04
 
