Use setcap instead of filecap on riscv64
filecap crashes on riscv64

Signed-off-by: ffgan <sudoemt@gmail.com>

--- a/conf/buildroot-riscv64.config
+++ b/conf/buildroot-riscv64.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 0.6.3-3-g677730a-dirty Configuration
+# Buildroot 0.6.3-4-gdaf11f4-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -2667,7 +2667,8 @@ BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 # libbsd needs a toolchain w/ dynamic library, threads, wchar
 #
 # BR2_PACKAGE_LIBBYTESIZE is not set
-# BR2_PACKAGE_LIBCAP is not set
+BR2_PACKAGE_LIBCAP=y
+BR2_PACKAGE_LIBCAP_TOOLS=y
 BR2_PACKAGE_LIBCAP_NG=y
 
 #
