build riscv64 in c-i, include linux-modules for kernel and minor adjustments. (#128)
* riscv64 - adjust how separate kernel is used, include linux-modules

Moving the declaration of the kernel to the top is helpful
to put it near the other. Also, this allows reading it from
an env var if it is present.

Also, put linux-modules into the kernel tar.

* add riscv64 build

--- a/.github/workflows/build-cirros.yaml
+++ b/.github/workflows/build-cirros.yaml
@@ -13,7 +13,7 @@ jobs:
   cirros-build-matrix:
     strategy:
       matrix:
-        arch: [aarch64, arm, x86_64, ppc64le]
+        arch: [aarch64, arm, x86_64, ppc64le, riscv64]
 
     runs-on: ubuntu-22.04
 
